--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -1,49 +1,47 @@
 ---
-import fs from 'node:fs/promises';
 import { XMLParser } from 'fast-xml-parser';
 import { markToHtml } from '../../tools/helper.parser';
 import BaseContainer from './BaseContainer.astro';
 
-/* 
-Just for documentation
-drawio diagram viewer: https://github.com/jgraph/drawio-tools/blob/master/tools/viewer.html
-*/
-
 const {
-    file,
-    page="1",
-    description="Please **insert** the description of this diagram"
+  file,
+  page = "1",
+  description = "Please **insert** the description of this diagram"
 } = Astro.props;
 
-// const url = new URL(`../../resources/${file}`, import.meta.url);
-// const xmlFile = await fs.readFile(url, 'utf-8');
-const response = await fetch(`https://raw.githubusercontent.com/harleylara/robotics/master/src/resources/${file}`)
-const xmlFile = await response.text();
+const response = await fetch(`https://raw.githubusercontent.com/harleylara/robotics/master/src/resources/${file}`);
 
-const parser = new XMLParser();
-const project = parser.parse(xmlFile);
+let diagram = "";
 
-let diagram = ""
+try {
+  if (response.ok) {
+    const xmlFile = await response.text();
+    const parser = new XMLParser();
+    const project = parser.parse(xmlFile);
 
-// when there is ONLY one page in the drawio file
-// the property diagram is just and string
-// BUT if there are more became a object of type array 
-// in wich each entry of the array represent
-// the page of the file in order.
-if (typeof(project.mxfile.diagram) === "string"){
-    diagram = project.mxfile.diagram
-} else {
-    diagram = project.mxfile.diagram[parseInt(page) - 1]
+    if (project.mxfile && project.mxfile.diagram) {
+      if (Array.isArray(project.mxfile.diagram)) {
+        diagram = project.mxfile.diagram[parseInt(page) - 1] || "";
+      } else {
+        diagram = project.mxfile.diagram;
+      }
+    }
+  } else {
+    // Handle the case where the response is not successful
+    // You can set a default value for the diagram or show an error message.
+    console.error(`Failed to fetch diagram: ${response.status} - ${response.statusText}`);
+  }
+} catch (error) {
+  console.error("An error occurred while processing the diagram:", error);
 }
 
-const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test.drawio#R${encodeURIComponent(diagram)}`
-
+const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test.drawio#R${encodeURIComponent(diagram)}`;
 ---
 
 <BaseContainer>
-    <div id="figure" class="flex flex-col items-center w-full">
-        <iframe style="width:100%;height:380px;" src={src}></iframe>
-        <em set:html={markToHtml(description)} class="py-4 px-4"></em>
-    </div>
+  <div id="figure" class="flex flex-col items-center w-full">
+    <iframe style="width:100%;height:380px;" src={src}></iframe>
+    <em set:html={markToHtml(description)} class="py-4 px-4"></em>
+  </div>
 </BaseContainer>
 
