--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -1,7 +1,12 @@
 ---
-import { XMLParser } from 'fast-xml-parser';
 import { markToHtml } from '../../tools/helper.parser';
 import BaseContainer from './BaseContainer.astro';
+
+/*
+Some relevant documentation about drawio and URL parameters
+- [Supported URL parameters](https://www.drawio.com/doc/faq/supported-url-parameters)
+*/
+
 
 const {
   file,
@@ -9,33 +14,9 @@ const {
   description = "Please **insert** the description of this diagram"
 } = Astro.props;
 
-const response = await fetch(`https://raw.githubusercontent.com/harleylara/robotics/master/src/resources/${file}`);
+const file_url = `https://raw.githubusercontent.com/harleylara/robotics/master/src/resources/${file}`
 
-let diagram = "";
-
-try {
-  if (response.ok) {
-    const xmlFile = await response.text();
-    const parser = new XMLParser();
-    const project = parser.parse(xmlFile);
-
-    if (project.mxfile && project.mxfile.diagram) {
-      if (Array.isArray(project.mxfile.diagram)) {
-        diagram = project.mxfile.diagram[parseInt(page) - 1] || "";
-      } else {
-        diagram = project.mxfile.diagram;
-      }
-    }
-  } else {
-    // Handle the case where the response is not successful
-    // You can set a default value for the diagram or show an error message.
-    console.error(`Failed to fetch diagram: ${response.status} - ${response.statusText}`);
-  }
-} catch (error) {
-  console.error("An error occurred while processing the diagram:", error);
-}
-
-const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test.drawio#R${encodeURIComponent(diagram)}`;
+const src = `https://viewer.diagrams.net/?dark=1&edit=_blank&tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&page=${page}&title=test.drawio#U${file_url}`;
 ---
 
 <BaseContainer>
